log

Thu 17 Aug 2023 04:15:46 PM UTC: 
 tests:  0|7
total_score: 0/70
b2645c7
Thu 17 Aug 2023 04:27:35 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
42cd395
Thu 17 Aug 2023 04:28:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 04:28:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 04:30:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Thu 17 Aug 2023 04:30:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7549495
Thu 17 Aug 2023 04:31:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:15: error: comparison between pointer and integer [-Werror]
   15 |   while(arr[i]!= NULL){
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
b3bcfcb
Thu 17 Aug 2023 04:31:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:16: error: comparison between pointer and integer [-Werror]
   15 |   while(arr[i] != NULL){
      |                ^~
cc1: all warnings being treated as errors
Compilation failed
5e0c503
